--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="date_of_birth">Date of Birth</string>
     <string name="bio">Bio</string>
     <string name="continue_text">Continue</string>
+    <string name="conversation_hint">Your message</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
